# dextview

./: .gitignore  Quattrocento-Configuration-Protocol.md  README.md  USER_GUIDE.md  plot_event.py  pyproject.toml  run_dextview.py  run_simulator.py
configs/: channels_default.toml
dextview/: __init__.py  app.py  channels.py  config.py  controller.py  models.py  processing.py  rebroadcast_detect.py  simulator.py  ui.py
dextview/hooks/: compositors.py  logic.py
dextview/stream/: __init__.py  _io.py  direct.py  parser.py  proxy.py  rebroadcast.py
docs/: latency_analysis.md
examples/: channels_default.toml
quattrocento/: app.py  capture_log.py  channels.py  channels_default.toml  config.py  controller.py  device.py  hooks.py  models.py  processing.py  protocol.py  quattrocento_conf2.toml  rebroadcast_detect.py  settings.py  simulator.py  socket_stream_config.toml  ui.py
quattrocento/hooks/: __init__.py  compositors.py  logic.py  ui.py
quattrocento/stream/: __init__.py  _io.py  direct.py  parser.py  proxy.py  rebroadcast.py
tests/: test_config.py  test_device.py  test_hooks.py  test_mvc.py  test_processing.py  test_proxy.py  test_rebroadcast.py  test_socket_settings.py  test_stream.py
