[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quattrocento"
version = "0.1.0"
description = "Trigger-based force capture and analysis for OT Bioelettronica Quattrocento streams."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Shayan Taheri" }]
dependencies = [
    "numpy",
    "scipy",
    "PyQt5",
    "pyqtgraph",
    "labjack-ljm",
]

[project.scripts]
quattrocento = "quattrocento.app:main"

[tool.setuptools.packages.find]
include = ["quattrocento*"]

[tool.setuptools.package-data]
quattrocento = ["*.toml"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pyqtgraph", "pyqtgraph.*", "labjack", "labjack.*"]
ignore_missing_imports = true
