[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dextview"
version = "0.1.0"
description = "Trigger-based force capture and analysis for OT Bioelettronica Quattrocento streams."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Shayan Taheri" }]
dependencies = [
    "numpy",
    "scipy",
    "PyQt5",
    "pyqtgraph",
    "labjack-ljm",
]

[project.scripts]
dextview = "dextview.app:main"

[tool.setuptools.packages.find]
include = ["dextview*"]

[tool.setuptools.package-data]
dextview = ["*.toml"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["pyqtgraph", "pyqtgraph.*", "labjack", "labjack.*"]
ignore_missing_imports = true
